
20061204: Fixed bug that did not save/restore chart pixelspaces.

20061205: Added options to send bar data through stdin to the ExScript plugin.

20061205: Applied patch #1609188 - modified util.html. Thanks to Lothar for the patch.

20061205: Added new UTIL function INRANGE. Returns TRUE if value is => min and <= max. Otherwise returns FALSE.

20061206: Changed the minimum bar spacing to 2.



0.33
====

20050606: Moved the text chart object grabbox from right side of text to the left side.

20050608: Fixed bad indicator group list in the move indicator dialog.

20050610: Changed SYMBOL indicator to recalculate when chart compression and bars loaded
          are updated.

20050628: Applied patch #1227777 - install.html updates.

20050829: Applied patch #1261806 - change portfolio's 'volume' variable from int to float
          Thanks to imoszarh for the patch.

20050831: Fixed CSV plugin to ignore delimiter chars in date fields

20050831: Fixed bars to load spinbox mouse scrolling problem. Replaced spinbox with a textbox.
          User must now enter numbers with keyboard and press enter key to make change official.

20050831: New indicator dialog now defaults to last used indicator.

20050905: Removed the MySQL plugin from the distribution. There will be officially no support
          for software authors/owners of products whose behaviour is disrespectful and harmful
          to the OSS community. Sorry Marco, I know a lot of users appreciated the work you did
          to support it. I will be looking at a possible postgres replacement in the future. 

20050906: Applied patch that adds a text option to the HorizontalLine plugin. Thanks to Michal
          for the patch.

20050906: Applied patch #1283054 - delete dupe symbol in portfolio. Thanks to imoszarh for the patch.

20050906: Applied patch #1283036 - show portfolio balance in percent. Thanks to imoszarh for the patch.
